Refactor domain model, add Liquibase changelogs and unified API error handling
- Refactored core domain entities (Person, Verein, Veranstaltung, Teilnehmer)
- Introduced code-based enums (Sex, VeranstaltungTyp, TeilnehmerRolle)
  with shared JPA AttributeConverter pattern
- Added missing Liquibase changelogs for:
  - Veranstaltung
  - Teilnehmer
  - Person (sex, telefon_festnetz, country code)
- Fixed multi-tenant schema initialization via Liquibase
- Unified REST error handling with GlobalExceptionHandler
- Removed duplicate ApiError definitions
- Aligned DTOs, mappers and services with updated data model
- Stabilized integration and smoke tests